--- a/JavaScript/geslachten/geslachten.css
+++ b/JavaScript/geslachten/geslachten.css
@@ -118,3 +118,30 @@ button {
     color: red;
     font-weight: bold;
 }
+
+
+ul {
+    list-style-type: none;
+    align-items: center;
+}
+
+ul a {
+    display: inline;
+    margin: 0 5px;
+}
+
+
+table {
+    border-collapse: collapse;
+}
+
+th,
+td {
+    border: 0.5px solid black;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #dcf2e4;
+}
